--- a/client/source/layouts/layout.haml
+++ b/client/source/layouts/layout.haml
@@ -7,7 +7,7 @@
 
     %title= current_page.data.title || "The Middleman"
 
-    = stylesheet_link_tag "normalize", "all"
+    = stylesheet_link_tag "all"
     = javascript_include_tag  "all"
 
   %body{class: page_classes}
