--- a/client/source/calibrate.html.haml
+++ b/client/source/calibrate.html.haml
@@ -1,10 +1,14 @@
 
-.jumbotron
-  %h1 Calibration
+.container
+  .jumbotron
+    %h1 Calibration
 
-  %p.lead Calibrate your devices by lining up the image so it is continuous across all displays
+    %p.lead Calibrate your devices by lining up the image so it is continuous across all displays
 
-  %p
-    %a#calibrate.btn.btn-lg.btn-primary(href="#") Calibrate Displays &raquo;
+    %p
+      %a#calibrate.btn.btn-lg.btn-primary(href="#") Calibrate Displays &raquo;
 
+#calibrator
+  #dragger
+  %a.btn.btn-lg.btn-primary(href="#") Done &raquo;
 
