--- a/client/source/stylesheets/calibrate.css.scss
+++ b/client/source/stylesheets/calibrate.css.scss
@@ -1,6 +1,38 @@
 
-body {
+html, body {
+  height:100%;
+}
+
+body.calibrate {
+  height:100%;
+
   .jumbotron {
     margin-top:2em;
+    display:none;
+  }
+
+  #calibrator {
+    //display:none;
+
+    border:1px solid #f00;
+    width:100%;
+    height:100%;
+    position:relative;
+
+    overflow:hidden;
+    #dragger {
+      width:1920px;
+      height:1080px;
+      background:url("/images/calibration.jpg")
+    }
+
+    a {
+      z-index:100;
+      position:absolute;
+      bottom:10px;
+      right:10px;
+    }
   }
 }
+
+
