Add calibration image

--- a/client/source/calibrate.html.haml
+++ b/client/source/calibrate.html.haml
@@ -1,4 +1,7 @@
 
+:coffee
+  $ -> new CalibrationPage()
+
 .container
   .jumbotron
     %h1 Calibration
@@ -10,5 +13,6 @@
 
 #calibrator
   #dragger
+  %p 0, 0
   %a.btn.btn-lg.btn-primary(href="#") Done &raquo;
 
