--- a/client/source/stylesheets/calibrate.css.scss
+++ b/client/source/stylesheets/calibrate.css.scss
@@ -21,9 +21,18 @@ body.calibrate {
 
     overflow:hidden;
     #dragger {
-      width:1920px;
-      height:1080px;
+      width:10000px;
+      height:10000px;
+      cursor:move;
       background:url("/images/calibration.jpg")
+    }
+
+    p {
+      z-index:100;
+      position:absolute;
+      top:10px;
+      right:10px;
+      font-weight:bold;
     }
 
     a {
